# GPU-FFT

./: .gitignore  256x256_matrix.dat.out  64x64_matrix.dat.out  CMakeLists.txt  README.md  baseline  compile.sh  eval.sh  gen  generate_matrix.cpp  process_ncu_csv.py  stage1  test_gpu_speed.sh
eval_results/: cufft_cache.csv  cufft_memtrans.csv  cufft_occupancy.csv  cufft_throughput.csv  eval.py  picgen.py  stage0_cache.csv  stage0_memtrans.csv  stage0_occupancy.csv  stage0_throughput.csv  stage1_cache.csv  stage1_memtrans.csv  stage1_occupancy.csv  stage1_throughput.csv  stage2_cache.csv  stage2_memtrans.csv  stage2_occupancy.csv  stage2_throughput.csv  stage3_cache.csv  stage3_memtrans.csv  stage3_occupancy.csv  stage3_throughput.csv
input/: 64x64_matrix.dat.out
src/: common.hpp  cufft2d.cu  fft-2D-simplified.cu  fft-baseline-2D.cu  fft-cpu-2D.cc  fft-stage0-2D.cu  fft-stage1-2D.cu  fft-stage2-2D.cu  fft-stage3-2D.cu  generate_matrix.cpp  process_ncu_csv.py
